# ml-capstone

./: .gitignore  .gitmodules  PROPOSAL.md  README.md
data/: README
data/cowc/: README  prepare.py
data/cowc/download/: list.txt
data/drone/: .gitignore  README  dataset.xml  list.txt  prepare.py
data/drone_val/: dataset.xml  prepare.py
data/gt/: dataset.xml
python/: clipping.py  create_gif.py  gt_test.py  prepare.py  stabilize.py  strip_images.py  test.py  transforms00.npz  transforms01.npz  transforms02.npz
python/detection/: create_traffic_tf_record.py
python/detection/configs/: ssd_mobilenet_v1_traffic.config
python/detection/samples/configs/: ssd_mobilenet_v1_traffic.config
python/traffic/: stabilize.py
traffic/: CMakeLists.txt  main.cpp  stabilizer.cpp  stabilizer.h
